fix scaling svg

--- a/Hebrew/index.html
+++ b/Hebrew/index.html
@@ -18,6 +18,10 @@
             margin: 20px auto;
         }
 
+        #image-div img {
+            width: 100%;
+        }
+
         #image {
             display: block;
             width: 100%;
