--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!--link rel="manifest" href="manifest.json"-->
@@ -8,7 +9,8 @@
     <script src="words-en.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma-rtl.min.css">
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-    <script src="confetti.min.js"></script><script>confetti.start()</script>
+    <script src="confetti.min.js"></script>
+    <script>confetti.start()</script>
 
     <style>
         #image-div {
@@ -51,30 +53,36 @@
             line-height: 1em;
             color: transparent;
         }
-
     </style>
 </head>
+
 <body>
 
-<div class="columns" id="app">
-    <div class="main column has-background-white-ter">
-        <div class="lang_selector">
-            <p style="text-align: center; margin-top: 20px">
+    <div class="columns" id="app">
+        <div class="main column has-background-white-ter">
+            <div class="lang_selector">
+                <p style="text-align: center; margin-top: 20px">
 
-                <a href="Hebrew/index.html"><img src="images/2560px-Flag_of_Israel.svg.png" style="display: inline-block; height: 150px; margin-right: 50px "></a>
-                <a href="English/index.html"><img src="images/2880px-Flag_of_the_United_States.svg.png" style="display: inline-block; height: 150px"></a>
-            </p>
-        </div>
-       
-       
-        <div class="apps_ad" id="ad" style="bottom: 200px;">
-            <p style="text-align: center; margin-bottom: 100px">
-                <a href="https://apps.apple.com/us/app/type-tap/id1533730810" target="_blank"><img src="images/download-on-the-app-store.png" style="display: inline-block; height: 50px; margin-right: 10px "></a>
-                <a href="https://play.google.com/store/apps/details?id=com.learnto.he" target="_blank"><img src="images/google-play-badge.png" style="display: inline-block; height: 50px"></a>
-            </p>
-        </div>
+                    <a href="Hebrew/"><img src="images/2560px-Flag_of_Israel.svg.png"
+                            style="display: inline-block; height: 150px; margin-right: 50px "></a>
+                    <a href="English/"><img src="images/2880px-Flag_of_the_United_States.svg.png"
+                            style="display: inline-block; height: 150px"></a>
+                </p>
+            </div>
 
+
+            <div class="apps_ad" id="ad" style="bottom: 200px;">
+                <p style="text-align: center; margin-bottom: 100px">
+                    <a href="https://apps.apple.com/us/app/type-tap/id1533730810" target="_blank"><img
+                            src="images/download-on-the-app-store.png"
+                            style="display: inline-block; height: 50px; margin-right: 10px "></a>
+                    <a href="https://play.google.com/store/apps/details?id=com.learnto.he" target="_blank"><img
+                            src="images/google-play-badge.png" style="display: inline-block; height: 50px"></a>
+                </p>
+            </div>
+
+        </div>
     </div>
-</div>
 </body>
+
 </html>
