--- a/Hebrew/index.html
+++ b/Hebrew/index.html
@@ -12,6 +12,14 @@
 
 
     <style>
+        .apps_ad {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 75%;
+            text-align: center;
+        }
+
         #image-div {
             width: 60vh;
             height: 60vh;
@@ -92,11 +100,16 @@
         <div class="main column is-three-quarters has-background-white-ter">
             <div class="apps_ad" id="ad">
                 <p style="text-align: center; margin-top: 20px">
+
                     <a href="https://apps.apple.com/us/app/type-tap/id1533730810" target="_blank"><img
                             src="../images/download-on-the-app-store.png"
                             style="display: inline-block; height: 50px; margin-right: 10px "></a>
-                    <a href="https://play.google.com/store/apps/details?id=com.learnto.he" target="_blank"><img
+
+                    <!--
+                         <a href="https://play.google.com/store/apps/details?id=com.learnto.he" target="_blank"><img
                             src="../images/google-play-badge.png" style="display: inline-block; height: 50px"></a>
+                         -->
+
                     <span id="close">x</span>
                 </p>
             </div>
